Improve styling a bit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
     </div>
 </noscript>
-<div id='app' class='h-100 d-flex flex-column'></div>
+<div id='app' class='h-100 d-flex flex-fill flex-column'></div>
 <script type='module' src='/src/main.js'></script>
 </body>
 </html>
